bad/invalid_cast_side_cast_01.example_compiler_output
ERROR
[1mbad/invalid_cast_side_cast_01.lat:8:6: [1;31merror: [0;1mincompatible types: cannot assign variable of type `Y` with an expression of type `Z`[m
	Y x = (Z)null;
	    [1;32m^[m
